# passfetch

./: Cargo.toml
src/: main.rs
