[package]
name = "passfetch"
version = "0.1.5"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["wincrypt","dpapi"] }
serde_json = "1.0.108"
base64 = "0.21.5"
sqlite = "0.32.0"
aes-gcm = "0.10.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1